...
import com.developer.ivan.beerapp.androidbase.theme.Red_60
import com.developer.ivan.beerapp.androidbase.utils.InfiniteListHandler
import com.developer.ivan.beerapp.androidbase.utils.LazyColumnPaginable
import com.developer.ivan.beerapp.ui.main.models.BeerUi
import com.developer.ivan.ui.R

const val BEER_LIST_TAG = "BeerListTag"

@Composable
fun BeerListScreen(
    viewModel: BeerListViewModel = hiltViewModel(),
    onNavigateToBeerDetail: (id: Int) -> Unit
) {
...
